Some routes, homepage

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,40 +2,106 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">Logo</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+      <ul class="nav navbar-nav navbar-right">
+          <li><%= button_to "Sign Up", new_user_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %></li>
+          <li><%= button_to "Sign In", new_user_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-     <!--- Greg Test -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<div id="header" class="header1"></div>
+
+<div class="row">
+  <div class="col-md-4">  
+    <div class="tags">
+      <h2>Tag Cloud</h2>
+      <ul>
+        <li class="tag1"><a href="#">Lorem ipsum</a></li> 
+        <li class="tag2"><a href="#">Dolor sit amet</a></li>
+        <li class="tag3"><a href="#">Consectetur adipiscing elit</a></li>
+        <li class="tag2"><a href="#">Proin </a></li>
+        <li class="tag4"><a href="#">Sagittis libero</a></li>
+        <li class="tag1"><a href="#">Aliquet augue</a></li>
+        <li class="tag1"><a href="#">Quisque dui lacus</a></li>
+        <li class="tag5"><a href="#">Consequat</a></li>
+        <li class="tag2"><a href="#">Dictum non</a></li>
+        <li class="tag1"><a href="#">Venenatis et tortor</a></li>
+        <li class="tag3"><a href="#">Suspendisse mauris</a></li>
+        <li class="tag4"><a href="#">In accumsan </a></li>
+        <li class="tag1"><a href="#">Egestas neque</a></li>
+        <li class="tag5"><a href="#">Mauris eget felis</a></li>
+        <li class="tag1"><a href="#">Suspendisse</a></li>
+        <li class="tag2"><a href="#">condimentum eleifend nulla</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <iframe class="vine-embed" src="https://vine.co/v/OeY3zbu0Ihv/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+  </div>
+  <div class="col-md-4">
+    <iframe class="vine-embed" src="https://vine.co/v/O5JlELng9Hv/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <iframe class="vine-embed" src="https://vine.co/v/O5q9TMb6rir/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+  </div>
+  <div class="col-md-4">
+    <iframe class="vine-embed" src="https://vine.co/v/OilgX6MEqMd/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+  </div>
+  <div class="col-md-4">
+    <iframe class="vine-embed" src="https://vine.co/v/M9HOLIZOOu3/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+  </div>
+</div>
+ 
+ <div class="row" style="background-color: black; color: white;">
+  <div class="col-md-3">
+    <ul>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+    </ul>
+  </div>
+  <div class="col-md-3">
+     <ul>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+    </ul>
+  </div>
+  <div class="col-md-3">
+       <ul>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+    </ul>
+  </div>
+  <div class="col-md-3">
+       <ul>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+      <li><a href="#" class="whiteLinks">Link</a></li>
+    </ul>
+  </div>
+</div>
+ <div class="row" style="background-color: black; color: white;">
+  <div class="col-md-12">
+    <div class="social">&#62220;</div>
+    <div class="social">&#62217;</div>
+    <div class="social">&#62223;</div>
+    <div class="social">&#62232;</div>
+    <div class="social">&#62235;</div>
+    <div class="social">&#62226;</div>
+    <div class="social">&#62214;</div>
+  </div>
+ </div>
