--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,136 @@
  */
 
  @import 'bootstrap';
+
+
+/* Homepage Image */
+
+#header {
+  height: 350px;
+  -webkit-background-size: 100% auto;
+  -moz-background-size: 100% auto;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-box-shadow: rgba(0,0,0,0.20) 0 10px 10px;
+  -moz-box-shadow: rgba(0,0,0,0.20) 0 10px 10px;
+  box-shadow: rgba(0,0,0,0.20) 0 10px 10px;
+}
+
+.header1 {
+  background-image: url("https://c1.staticflickr.com/9/8151/7150039103_0da71608b4_c.jpg");
+}
+
+.navbar {
+  margin-bottom: 0px;
+}
+
+/* White Links at Bottom */
+
+a.whiteLinks:link {color:#ffffff;}
+a.whiteLinks:visited {color:#ffffff;}
+a.whiteLinks:hover{color:#ffffff; text-decoration:underline;}
+
+/* Tag cloud */
+
+  .tags ul{
+    margin:1em 0;
+    padding:.5em 10px;
+   
+    
+    }
+  .tags li{
+    margin:0;
+    padding:0;
+    list-style:none;
+    display:inline;
+    }
+  .tags li a{
+    text-decoration:none;
+    
+    padding:0 2px;  
+    }
+  .tags li a:hover{ 
+  
+    }   
+  
+  .tag1{font-size:100%;}
+  .tag2{font-size:120%;}
+  .tag3{font-size:140%;}
+  .tag4{font-size:160%;}
+  .tag5{font-size:180%;}
+
+  
+/* // Tag cloud */
+
+@import url('http://weloveiconfonts.com/api/?family=entypo');
+
+
+.social {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin: 0 10px;
+  line-height: 50px;
+  font-family: Entypo;
+  font-size: 28px;
+  text-align: center;
+  color: #555;
+  border-radius: 10px;
+  background: #eee;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.social {
+  box-shadow: rgb(210, 210, 210) 1px 1px,
+    rgb(210, 210, 210) 2px 2px,
+    rgb(211, 211, 211) 3px 3px,
+    rgb(211, 211, 211) 4px 4px,
+    rgb(211, 211, 211) 5px 5px,
+    rgb(212, 212, 212) 6px 6px,
+    rgb(212, 212, 212) 7px 7px,
+    rgb(212, 212, 212) 8px 8px,
+    rgb(213, 213, 213) 9px 9px,
+    rgb(213, 213, 213) 10px 10px,
+    rgb(214, 214, 214) 11px 11px,
+    rgb(214, 214, 214) 12px 12px,
+    rgb(214, 214, 214) 13px 13px,
+    rgb(215, 215, 215) 14px 14px,
+    rgb(215, 215, 215) 15px 15px,
+    rgb(215, 215, 215) 16px 16px,
+    rgb(216, 216, 216) 17px 17px,
+    rgb(216, 216, 216) 18px 18px,
+    rgb(216, 216, 216) 19px 19px,
+    rgb(217, 217, 217) 20px 20px,
+    rgb(217, 217, 217) 21px 21px,
+    rgb(218, 218, 218) 22px 22px,
+    rgb(218, 218, 218) 23px 23px,
+    rgb(218, 218, 218) 24px 24px,
+    rgb(219, 219, 219) 25px 25px,
+    rgb(219, 219, 219) 26px 26px,
+    rgb(219, 219, 219) 27px 27px,
+    rgb(220, 220, 220) 28px 28px,
+    rgb(220, 220, 220) 29px 29px,
+    rgb(221, 221, 221) 30px 30px;
+   text-shadow: rgb(226, 226, 226) 0px 0px,
+    rgb(227, 227, 227) 2px 2px,
+    rgb(227, 227, 227) 3px 3px,
+    rgb(228, 228, 228) 4px 4px,
+    rgb(229, 229, 229) 5px 5px,
+    rgb(229, 229, 229) 6px 6px,
+    rgb(230, 230, 230) 7px 7px,
+    rgb(230, 230, 230) 8px 8px,
+    rgb(231, 231, 231) 9px 9px,
+    rgb(232, 232, 232) 10px 10px,
+    rgb(232, 232, 232) 11px 11px,
+    rgb(233, 233, 233) 12px 12px,
+    rgb(233, 233, 233) 13px 13px,
+    rgb(234, 234, 234) 14px 14px,
+    rgb(235, 235, 235) 15px 15px,
+    rgb(235, 235, 235) 16px 16px,
+    rgb(236, 236, 236) 17px 17px,
+    rgb(236, 236, 236) 18px 18px,
+    rgb(237, 237, 237) 19px 19px,
+    rgb(238, 238, 238) 20px 20px;
+}
