--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
 <h1>Sign Up</h1>
 
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -14,15 +17,19 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :password %><br />
-    <%= f.password_field :password %>
+    <%= f.password_field :password, :class => 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, :class => 'form-control' %>
   </div>
   <div class="actions"><%= f.submit "Sign Up" %></div>
 <% end %>
+  </div>
+  <div class="col-md-4"></div>
+</div>
+
