--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,11 @@
     </div>
   <% end %>
 
+    <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, :class => 'form-control' %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.text_field :email, :class => 'form-control' %>
