--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
-<h1>Sign Up</h1>
-
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-body">
+    <h1>Join "Happy" today</h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -16,25 +17,29 @@
   <% end %>
 
     <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, :class => 'form-control' %>
-  </div>
+    <%= f.text_field :username, :class => 'form-control', :placeholder => 'username' %> <br />
+    </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email, :class => 'form-control' %>
+    <%= f.text_field :email, :class => 'form-control', :placeholder => 'email' %> <br />
   </div>
   <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, :class => 'form-control' %>
+    <%= f.password_field :password, :class => 'form-control', :placeholder => 'password' %> <br />
   </div>
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, :class => 'form-control' %>
-  </div>
-  <div class="actions"><%= f.submit "Sign Up" %></div>
+    <%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => 'confirm password' %>
+  </div> <br />
+  <div class="actions"><%= f.submit "Create my Account", :class => 'btn btn-warning' %></div>
 <% end %>
+    </div>
+    <div class="panel-footer">
+      <small><p class="text-muted">Already have an account? <%= link_to "Sign  In", new_session_path %> </p></small>
+    </div>
+    </div>
+
   </div>
   <div class="col-md-4"></div>
 </div>
+
+
 
