changes to the sign in and sign up page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,3 +146,7 @@ a.whiteLinks:hover{color:#ffffff; text-decoration:underline;}
     rgb(237, 237, 237) 19px 19px,
     rgb(238, 238, 238) 20px 20px;
 }
+
+.panel-default {
+  margin-top: 20px;
+}
