--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
-       <li class="navbar-text"> Logged in as <%= current_user.email %>.
+       <li class="navbar-text"> Logged in as <%= current_user.username %>
         <%= link_to "Log Out", logout_path  %></li>
         <% else %>
         <li><%= button_to "Sign Up", new_user_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %> 
