--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,18 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
-       <li class="navbar-text"> Logged in as <%= current_user.username %>
-        <%= link_to "Log Out", logout_path  %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Logged in as <%= current_user.username %><span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Log Out", logout_path  %></li>
+        
         <% else %>
+        
         <li><%= button_to "Sign Up", new_user_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %> 
-          <li class="navbar-text"><% flash.each do |name,msg| %> <%= content_tag :div, msg, id: "flash_#{name}" %></li>
-        <% end %></li>
+        <li class="navbar-text">
+          <% flash.each do |name,msg| %> 
+            <%= content_tag :div, msg, id: "flash_#{name}" %></li>  
+          <% end %></li>
           <li><%= button_to "Sign  In", new_session_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %></li>
           <% end %>
       </ul>
