--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,14 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Logo</a>
     </div>
+ 
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Users", users_path %></li>
+        <li><%= link_to "Questions", questions_path %></li>
+      </uL>
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
           <li class="dropdown">
