api controller added

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,7 +8,7 @@
            User  ID: <%=q.user_id %><br />
            Username: <%=q.user.username %><br />
             <%= q.the_question %><br />
-            <%= link_to "More details!", question_path(q) %>
+            <%= link_to "More details!", api_question_path(q) %>
         </li>
       <% end %>
     </div>
