--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to "Users", users_path %></li>
-        <li><%= link_to "Questions", questions_path %></li>
+        <li><%= link_to "Questions", api_questions_path %></li>
       </uL>
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
