--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -9,4 +9,4 @@
 
     <% end %>
 
-    <%= link_to "Back to the list!", questions_path %>
+    <%= link_to "Back to the list!", api_questions_path %>
