--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,8 +20,8 @@
         <%= v.submit "Create Answer", :class => 'btn btn-warning' %>
         <% end %>
     
-      <%= link_to "Back to the list!", questions_path %><br />
-      <%= link_to "Edit Question", edit_question_path %><br />
+      <%= link_to "Back to the list!", api_questions_path %><br />
+      <%= link_to "Edit Question", edit_api_question_path %><br />
       <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> 
     </div>
     <div class="col-md-4"></div>
