--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -4,14 +4,21 @@
     <div class="col-md-4">
       <% @videos.each do |v| %>
         <li>
-            <strong> <%#= v.id %> </strong><br />
-           User  ID: <%#=v.user_id %><br />
+            <strong> <%= v.id %> </strong><br />
+           User  ID: <%=v.user_id %><br />
            Username: <%#=v.user.username %><br />
-            <%#= v.the_answer %><br />
-            <%#= link_to "More details!", video_path(v) %>
+
+            <%= v.the_answer %><br />
+            <%= link_to "More details!", video_path(v) %>
         </li>
       <% end %>
     </div>
     <div class="col-md-4"></div>
   </div>
 </div>
+
+User  ID: (of the Question)
+The Question: 
+
+Answer:
+ (if theres another answer): Answer 2
