--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -22,8 +22,8 @@
         <%= submit_tag("Create Answer", :class => 'btn btn-warning')%>
       <% end %>
     
-      <%= link_to "Back to the list!", api_questions_path %><br />
-      <%= link_to "Edit Question", edit_api_question_path %><br />
+      <%= link_to "Back to the list!", questions_path %><br />
+      <%= link_to "Edit Question", edit_question_path %><br />
       <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> 
     </div>
     <div class="col-md-1"></div>
