--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,33 +2,20 @@
 
 <div class="row">
   <div class="col-md-4">  
-    <div class="tags">
-      <h2>Tag Cloud</h2>
-      <ul>
-        <li class="tag1"><a href="#">Lorem ipsum</a></li> 
-        <li class="tag2"><a href="#">Dolor sit amet</a></li>
-        <li class="tag3"><a href="#">Consectetur adipiscing elit</a></li>
-        <li class="tag2"><a href="#">Proin </a></li>
-        <li class="tag4"><a href="#">Sagittis libero</a></li>
-        <li class="tag1"><a href="#">Aliquet augue</a></li>
-        <li class="tag1"><a href="#">Quisque dui lacus</a></li>
-        <li class="tag5"><a href="#">Consequat</a></li>
-        <li class="tag2"><a href="#">Dictum non</a></li>
-        <li class="tag1"><a href="#">Venenatis et tortor</a></li>
-        <li class="tag3"><a href="#">Suspendisse mauris</a></li>
-        <li class="tag4"><a href="#">In accumsan </a></li>
-        <li class="tag1"><a href="#">Egestas neque</a></li>
-        <li class="tag5"><a href="#">Mauris eget felis</a></li>
-        <li class="tag1"><a href="#">Suspendisse</a></li>
-        <li class="tag2"><a href="#">condimentum eleifend nulla</a></li>
-      </ul>
-    </div>
+ <video width="480" height="480" controls>
+  <source src="1d39ffk1wzh1nt13n8dsj_merged.webm" type="video/webm">
+  </video>
   </div>
   <div class="col-md-4">
-    <iframe class="vine-embed" src="https://vine.co/v/OeY3zbu0Ihv/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+  <video width="480" height="480" controls>
+  <source src="1d39ffk1wzh1nt13n8dsj_merged.webm" type="video/webm">
+  </video>
   </div>
   <div class="col-md-4">
-    <iframe class="vine-embed" src="https://vine.co/v/O5JlELng9Hv/embed/simple" width="480" height="480" frameborder="0"></iframe><script async src="//platform.vine.co/static/scripts/embed.js" charset="utf-8"></script>
+   <video width="480" height="480" controls>
+  <source src="1d39ffk1wzh1nt13n8dsj_merged.webm" type="video/webm">
+  </video>
+
   </div>
 </div>
 <div class="row">
