questions path fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,10 @@
   margin-bottom: 0px;
 }
 
+.navbar-brand {
+  margin-top: 0px;
+}
+
 /* White Links at Bottom */
 
 a.whiteLinks:link {color:#ffffff;}
