--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,14 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Logo</a>
+       <div class="navbar-brand" href="#"><%= link_to image_tag("qurl_logo_100.png"), root_path, method: :get %></div>
     </div>
  
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+<!--         <li style="max-width:100px; margin-top: -7px;"><%= link_to image_tag("logo_100px.png"), root_path, method: :get %>  -->
         <li><%= link_to "Users", users_path %></li>
         <li><%= link_to "Questions", questions_path %></li>
       </uL>
