--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav">
 <!--         <li style="max-width:100px; margin-top: -7px;"><%= link_to image_tag("logo_100px.png"), root_path, method: :get %>  -->
         <li><%= link_to "Users", users_path %></li>
-        <li><%= link_to "Questions", api_questions_path %></li>
+        <li><%= link_to "Questions", questions_path %></li>
       </uL>
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
