--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -5,4 +5,4 @@
        <%= q.submit "Edit Question!" %>
     <% end %>
 
-    <%= link_to "Back to the list!", api_questions_path %>
+    <%= link_to "Back to the list!", questions_path %>
