--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,11 +1,20 @@
-
-<%= form_for @question do |q| %>
-
-
-  <div class="field">
-    <%= q.text_field :the_question, :class => 'form-control', :placeholder => 'question' %> 
-    <%= q.hidden_field :user_id, value: current_user.id %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div class="panel panel-default">
+          <div class="panel-body">
+          <div class="panel-heading"><h2>Create a New Question</h2></div>
+            <%= form_for @question do |q| %>
+              <div class="field">
+                <%= q.text_field :the_question, :class => 'form-control', :placeholder => 'What are you curious about?' %> 
+                <%= q.hidden_field :user_id, value: current_user.id %>
+              </div><br />
+              <%= q.submit "Create Question", :class => 'btn btn-warning' %>
+            <% end %>
+        </div>
+      </div>
+      
+    <div class="col-md-2"></div>
   </div>
-
-  <%= q.submit "Create Question", :class => 'btn btn-warning' %>
-<% end %>
+</div>
