--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,25 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row"><br />
     <div class="col-md-1"></div>
-    <div class="col-md-3">
-      <br />
-      <%= link_to "Create a New Question", new_question_path,  :class => 'btn btn-warning' %>
-    </div>
+    <div class="col-md-3"><%= link_to "Create a Question", new_question_path, :class => "btn btn-warning" %></div>
     <div class="col-md-4">
-        <h1> 
-        Welcome: <%= @user.username %>
-        </h1>    
-        <i>List of Questions To Answer</i><br />
-      <% @questions.each do |q| %>
-        <% if  q.user_id != @user.id %>
-          <strong><%=q.user.username %>'s</strong> Question: <strong><%=q.the_question %></strong> - <%= link_to "Answer This Question", question_path(q) %><br />
-        <% end %>
-      <% end %>
-
-      <hr />
-      <h2>User's Questions</h2>
-      <p>Username: <%= @user.username %></p>
-      <p>E-Mail: <%= @user.email %><br /><br />
+      <div> Welcome <%= @user.username %> </div></br>
       <% @user.questions.each do |q| %>
-      <i>Created On: <%= q.created_at %></i><br />
-        Question: <%= q.the_question %></p>
-                    
+      <%= link_to q.the_question, question_path(q) %> 
+      <%= link_to "Delete", method: :delete, :class => "btn btn-danger btn-xs float-right" %> </br>
+      <%= q.created_at %></br>
+      <% end %> 
+      <% @user.questions.each do |q| %>
+      <%= q.user.inspect %> <%= q.the_question %> </br>
+      <%= q.created_at %> </br>
+       
       <% end %>
-      <%= link_to "Back to the list!", users_path %><br />
-      <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> 
     </div>
-    <div class="col-md-4"></div>
+
+
+   
+    <div class="col-md-4">Videos here</div>
   </div>
 </div>
+
+
