remove href from div tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-       <div class="navbar-brand" href="#"><%= link_to image_tag("qurl_logo_100.png"), root_path, method: :get %></div>
+    <div class="navbar-header"> 
+       <div class="navbar-brand" ><%= link_to image_tag("qurl_logo_100.png"), root_path, method: :get %></div>
     </div>
  
 
