--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,10 @@
           <div class="panel-heading"><h2>The Question: <%= @question.the_question %></h2></div>
            <i>Belongs to: <%= @question.user.username %></i><br />
           <% @question.videos.each do |v| %>
-          <%= v.the_answer %>
+          <%= v.the_answer %><br /><br />
+            <video width="480" height="480" controls>
+            <source src="1d39ffk1wzh1nt13n8dsj_merged.webm" type="video/webm">
+            </video>
           <% end %>
         </div>
       </div>
