--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,7 +35,7 @@
 }
 
 .header1 {
-  background-image: url("https://c1.staticflickr.com/9/8151/7150039103_0da71608b4_c.jpg");
+  background-image: url("http://www.dayindecember.com/wp-content/uploads/2012/01/Times-Square1.jpg");
 }
 
 .navbar {
@@ -160,4 +160,4 @@ a.whiteLinks:hover{color:#ffffff; text-decoration:underline;}
   margin-top: 20px;
 }
 
-
+video{ /* video border */ border: 1px solid #ccc; padding: 5px; margin: 5px; border-radius: 20px; /* tranzitionstransitions applied to the vodeovideo element */ -moz-transition: all 1s ease-in-out; -webkit-transition: all 1s ease-in-out; -o-transition: all 1s ease-in-out; -ms-transition: all 1s ease-in-out; transition: all 1s ease-in-out; } /* background color and gradient */ video, #start, #stop, #pause, #plus, #minus, #mute { /* background color */ background-color: #ffffff; /* background gradient */ background-image: linear-gradient(top, #fff, #fff); background-image: -moz-linear-gradient(top, #fff, #fff); background-image: -webkit-linear-gradient(top, #fff, #fff); background-image: -o-linear-gradient(top, #fff, #fff); background-image: -ms-linear-gradient(top, #fff, #fff); } /* shadows */ video, #start, #stop, #pause, #plus, #minus, #mute { box-shadow: 0 0 10px #ccc; } video:hover, video:focus, #start:hover, #stop:hover, #pause:hover, #plus:hover, #minus:hover, #mute:hover { /* glow */ box-shadow: 0 0 10px #f88; } #controls { display: none; margin: 10px 10px; } /* style for buttons */ #start, #stop, #pause, #plus, #minus, #mute { border: 1px solid #ccc; padding: 5px; border-radius: 10px; width: 60px; margin: 0 10px 0 0; }
