--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,14 +2,24 @@
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
+      <h1>Users List</h1>
+      <table class="table table-striped">
       <% @users.each do |u| %>
-        <li>
-            <strong> <%= u.id %> </strong><br />
-            <%= u.username %><br />
-            <%= u.email %><br />
+      <tr>
+        <td>
+           <%= u.id %> 
+            </td>
+            <td><%= u.username %>
+             </td> 
+              <td><%= u.email %>
+              </td>
+              <td>
              <%= link_to "More details!", user_path(u) %>
-        </li>
+           </td>
+    
+      </tr>
       <% end %>
+      </table>
     </div>
     <div class="col-md-4"></div>
   </div>
