--- a/app/assets/stylesheets/videos.css.scss
+++ b/app/assets/stylesheets/videos.css.scss
@@ -25,5 +25,5 @@ a:hover, a:focus { color: #1B29A4; }
 a:active { color: #000; }
 
 audio, video {
-    border: 1px solid rgb(15, 158, 238); width: 480px; height: 360px;
+    border: 1px solid rgb(15, 158, 238); 
 }
