--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -23,12 +23,14 @@
           <div class="panel-heading"><h2>Questions with Answers</h2></div>
           
           <% @questions.each do |q| %>
-            QUESTION: <%= q.the_question %><br />
+            QUESTION: <%= link_to q.the_question, question_path(q) %> - <%= link_to q.user.username, user_path(q) %><br />
             <% if q.videos[0] != nil %>
-              <video width="480" height="480" controls>
-              <source src="1d39ffk1wzh1nt13n8dsj_merged.webm" type="video/webm">
-              </video>
-              ANSWER: <%= q.videos[0].the_answer %><br/ ><hr />
+              <video width="90%" height="90%" controls>
+                <source src="<%= q.videos[0].filepath %>" type="video/webm">
+              </video><br />
+              <%= link_to "Create Your Own Video Answer!", new_video_path(q) %><br />
+              <hr />
+            
             <% end %>
            <% end %>
          </div>
