--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,14 +4,22 @@
     <div class="col-md-10">
       <div class="panel panel-default">
         <div class="panel-body">
-          <div class="panel-heading"><h2>The Question: <%= @question.the_question %></h2></div>
-           <i>Belongs to: <%= @question.user.username %></i><br />
-          <% @question.videos.each do |v| %>
-          <br /><br />
-            <video width="480" height="480" controls>
-            <source src="<%= v.filepath %>" type="video/webm">
-            </video>
-          <% end %>
+          <div class="panel-heading"><h1>The Question: <%= @question.the_question %></h1></div>
+            <% @question.videos.each do |v| %>
+                  <% if v.filepath != nil %>
+                    
+                      <video width="70%" height="70%" controls>
+                        <source src="<%= v.filepath %>" type="video/webm">
+                      </video>
+                    
+                      <div class="floatRight">
+                        <i>Belongs to: <%= link_to @question.user.username, user_path(@question.user.id) %></i>
+                      </div>
+                      <hr />
+                    
+                  <% end %>
+                
+            <% end %>
         </div>
       </div>
       
