--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class='col-md-8'>
       <p>
-          <video></video> 
+          <video width="90%" height="90%"></video> 
       </p><hr />
 
       <div>
