--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -35,8 +35,9 @@
   </div>
 </div>
 
-<script src='/assets/RecordRTC.js'></script>
-<script src='/assets/mediaRecorder.js'></script>
+<%= javascript_include_tag "RecordRTC" %>
+<%= javascript_include_tag "mediaRecorder" %>
+
 <script>window.onload=function(){mediaRecorder()}</script>
 
 
