minor style changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,3 +179,16 @@ video{ /* video border */ border: 1px solid #ccc; padding: 5px; margin: 5px; bor
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Condensed', sans-serif;
 }
+
+.grey {
+  color: grey;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.questions {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+}
