--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,42 +1,42 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-1">
-    </div>
-      <div class="col-md-5">
-        <div class="panel panel-default">
-          <div class="panel-body">
-          <div class="panel-heading"><h2>Questions</h2></div>
-       
-          <% @questions.each do |q| %>
-            <li><%= q.the_question %> <i><%=q.user.username %></i> |  
+    <div class="col-md-1"></div>
 
-              <%= link_to "Answer This Question", question_path(q) %>
+    <div class="col-md-5">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="panel-heading"><h2>Questions</h2></div>
+          <% @questions.each do |q| %>
+            <span class="grey"><span class="underline"><%=q.user.username %></span> wants to know...</span><br />
+            <li><span class="questions"><%= q.the_question %></span><br />
+              <%= link_to "Answer This Question", question_path(q), :class => 'btn btn-success' %>
             </li>
             <hr />
           <% end %>
         </div>
       </div>
-        </div>
-        <div class="col-md-5">
-           <div class="panel panel-default">
+    </div>
+
+      <div class="col-md-5">
+        <div class="panel panel-default">
           <div class="panel-body">
           <div class="panel-heading"><h2>Questions with Answers</h2></div>
-          
-          <% @questions.each do |q| %>
-            QUESTION: <%= link_to q.the_question, question_path(q) %> - <%= link_to q.user.username, user_path(q) %><br />
-            <% if q.videos[0] != nil %>
-              <video width="90%" height="90%" controls>
-                <source src="<%= q.videos[0].filepath %>" type="video/webm">
-              </video><br />
-              <%= link_to "Create Your Own Video Answer!", new_video_path(q) %><br />
-              <hr />
-            
+            <% @questions.each do |q| %>
+              <span class="grey"><span class="underline"><%= link_to q.user.username, user_path(q) %></span> wants to know...<br />
+              <span class="questions"><%= link_to q.the_question, question_path(q) %></span> <br />
+              <% if q.videos[0] != nil %>
+                <video width="90%" height="90%" controls>
+                  <source src="<%= q.videos[0].filepath %>" type="video/webm">
+                </video><br />
+                <%= link_to "Create Your Own Video Answer!", new_video_path(q) %><br />
+                <hr />
+              <% end %>
             <% end %>
-           <% end %>
-         </div>
-       </div>
+          </div>
         </div>
-    <div class="col-md-1">
+      </div>
+      
+      <div class="col-md-1">
     </div>
   </div>
 </div>
