--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,24 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <h1>Users List</h1>
-      <table class="table table-striped">
-      <% @users.each do |u| %>
-      <tr>
-        <td>
-           <%= u.id %> 
+      <div class="col-md-4">
+        <h1>Users List</h1>
+        <table class="table table-striped">
+        <% @users.each do |u| %>
+          <tr>
+            <td>
+              <%= u.id %> 
             </td>
-            <td><%= u.username %>
-             </td> 
-              <td><%= u.email %>
-              </td>
-              <td>
+            <td>
+              <%= u.username %>
+            </td> 
+            <td>
+              <%= u.email %>
+            </td>
+            <td>
              <%= link_to "More details!", user_path(u) %>
-           </td>
-    
-      </tr>
+            </td>
+          </tr>
       <% end %>
       </table>
     </div>
