fixed videos_controller and new page. round 2

--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -22,7 +22,7 @@
           <input id="btn-save" class="btn btn-warning" disabled="" value="post" type="submit">
           <input id='filepath' name='filepath' type='hidden' value=''>
           <input id='question_id' name='question_id' value="<%=@question.id%>" type='hidden'>
-          <input id='user_id' name='user_id' value="<%=@current_user.id%>" type='hidden'>
+          <input id='user_id' name='user_id' value="<%=current_user.id%>" type='hidden'>
         </form>
 
       </div>
